--- a/index.html
+++ b/index.html
@@ -11,37 +11,33 @@
       <header class="header bounds">
         <img src="images/header-logo.svg" class="logo" alt="Логотип">
         <ul class="header__lang">
-          <li><a href="#" class="header__lang-link">Ru</a></li>
-          <li><a href="#" class="header__lang-link header__lang-link_modify">En</a></li>
+          <li><a href="#" class="header__lang-link header__lang-link_modify">Ru</a></li>
+          <li><a href="#" class="header__lang-link">En</a></li>
         </ul>
       </header>
       <main class="content bounds">
         <section class="lead">
-          <div>
-            <h1 class="lead__title">Путешествия по России</h1>
-            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img src="images/lead-polka.jpg" class="lead__image" alt="Полка">
-            <p class="lead__caption">Ваша полка - верхняя</p>
-          </div>
+          <h1 class="lead__title">Путешествия по России</h1>
+          <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+          <img src="images/lead-polka.jpg" class="lead__image" alt="Полка">
+          <p class="lead__caption">Ваша полка - верхняя</p>
         </section>
         <section class="intro">
-          <div>
-            <h2 class="intro__title">Чего мы там не видели?</h2>
-              <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют 
-                  провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая 
-                  вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все 
-                  эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, 
-                  Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и 
-                  проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные 
-                  вашего отпуска.</p>
-              <ul class="intro__list">
-                <li>Часовых поясов 11</li>
-                <li>Объектов природного наследия ЮНЕСКО 12</li>
-                <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                <li>Природных заповедников 105</li>
-                <li>Аэропортов 241</li>
-              </ul>
-          </div>
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют 
+                провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая 
+                вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все 
+                эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, 
+                Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и 
+                проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные 
+                вашего отпуска.</p>
+            <ul class="intro__list">
+              <li>Часовых поясов <span class="intro__normal">11</span></li>
+              <li>Объектов природного наследия ЮНЕСКО <span class="intro__normal">12</span></li>
+              <li>Объектов культурного наследия ЮНЕСКО <span class="intro__normal">16</span></li>
+              <li>Природных заповедников <span class="intro__normal">105</span></li>
+              <li>Аэропортов <span class="intro__normal">241</span></li>
+            </ul>
         </section>
         <section class="photo-grid">
           <img src="images/photo-grid-train.jpg" class="photo-grid__item" alt="Поезд">
@@ -156,7 +152,7 @@
         </section>
       </main>
       <footer class="footer bounds">
-        <div class="footer__columns">
+        <nav class="footer__columns">
           <ul class="footer__links">
             <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
             <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
@@ -165,7 +161,7 @@
             <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
           </ul>
           <p class="footer__copyright">&copy; 2021 Ладыгин Павел</p>
-        </div>
+        </nav>
       </footer>
     </div>
   </body>
