--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
       <footer class="footer bounds">
         <nav class="footer__columns">
           <ul class="footer__links">
-            <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
-            <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
-            <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
-            <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
-            <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
+            <li class="footer__list"><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
+            <li class="footer__list"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
+            <li class="footer__list"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
+            <li class="footer__list"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
+            <li class="footer__list"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
           </ul>
           <p class="footer__copyright">&copy; 2021 Ладыгин Павел</p>
         </nav>
